terminado con foto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="titulo">Agregar Personas</string>
     <string name="Agregar">Agregar</string>
     <string name="limpiar">Limpiar</string>
+    <string name="mensaje">usuario registrado</string>
+
 
 </resources>
